--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                 <p>Library</p>
             </div>
         </div>
-       
+       <a href="new.html">Link</a>
         <div class="grid">
             <div class="video-preview">
                 <div class="video-image">
